--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,12 @@ body {
 }
 
 button {
-    /* padding: 10rem; */
     border-radius: 0.4rem;
-    /* height: 10rem; */
     width: 15rem;
     background-color: aquamarine;
 }
 
 button > img {
-    /* height: auto;
-    width: 100%; */
     height: 15rem;
 }
 
@@ -36,13 +32,59 @@ button > img {
 
 .img > img {
     width: 100%;
-    /* height: 100%; */
     position: absolute;
     top: 0;
     left: 0;
-    /* transform: translate(-50%, 0); */
 }
 
 .dispnon {
     display: none;
+}
+
+.game_end {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0.02, 0.02, 0.02, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.game_stop {
+    width: 35%;
+    height: 20%;
+    background-color: blue;
+    border-radius: 0.5rem;
+}
+
+.game_stop > p {
+    font-size: 3rem;
+    color: #fff;
+    text-align: center;
+}
+
+.error {
+    width: 35%;
+    height: 20%;
+    background-color: red;
+    border-radius: 0.5rem;
+}
+
+.error > p {
+    font-size: 3rem;
+    color: #fff;
+    text-align: center;
+}
+
+.z5 {
+    z-index: 5;
+}
+
+.z-10 {
+    z-index: -100;
+    width: 0;
+    height: 0;
 }
